--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,14 +1,9 @@
 <article>
-	<h1> Histoire de vous en dire un peu plus, si ça devait se résumer en une citation...</h1>
-	<p style="margin-bottom:60px;">
-  <center><blockquote>
-    <h4><em>"Théoriquement, c'est trop facile."</em></h4>
-</blockquote>
+	 <p style="margin-bottom:30px;">
 
-<cite><strong>Dylan LH</strong>, Depuis THP</cite></center>
-</article>
+  <center><h4> Histoire de vous en dire un peu plus, si ça devait se résumer en une citation...</h4></center>
 
-<p style="margin-bottom:40px;">
+  <p style="margin-bottom:60px;">
 
    <section>
     <center>
@@ -43,13 +38,24 @@
    </div>
  </center>
 
+  <p style="margin-bottom:60px;">
+  <center><blockquote>
+    <h4><em>"Théoriquement, c'est trop facile."</em></h4>
+</blockquote>
+
+<cite><strong>Dylan LH</strong>, Depuis THP</cite></center>
+</article>
+
+<p style="margin-bottom:40px;">
+
+
 <center><div class="container">
    <!-- Example row of columns -->
    <div class="row">
      <div class="col-md-4">
        <p><i class="fab fa-angellist"></i></br>
-        <p style="margin-bottom:20px;">
-        <h3><strong>Paumés...</strong></h3>On était potes dans la vie, puis on a décidé de faire THP.</p>
+        <p style="margin-bottom:0px;">
+        <h3><strong>Paumés...</strong></h3>On était potes dans la vie, puis on a décidé de faire THP.
      </div>
      <div class="col-md-4">
       <i class="fas fa-american-sign-language-interpreting"></i>
