--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -2,17 +2,17 @@
 
 <%= form_for @gossip do |f| %>
   <div class="form-group">
-    <label>Titre de l'article</label>
+    <label>Titre du Gossip</label>
     <%= f.text_field :title, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <label>Contenu de l'article</label>
+    <label>Contenu du Gossip</label>
     <%= f.text_area :content, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <button type="submit" class="btn btn-primary">Publier le Gossip !</button>
+    <button type="submit" class="btn btn-primary">Publier</button>
   </div>
 
 <%end%>
