--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
     <title>CrudAuChocolat</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://bootswatch.com/4/lux/bootstrap.min.css" rel="stylesheet">
+  
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -15,18 +16,18 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <a class="my-0 mr-md-auto font-weight-bold" href=/home><strong>GOSSIPS AU CHOCOLAT</strong></a>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="<%= new_gossip_path %>">Créer son gossip my'men</a>
-        <a class="p-2 text-dark" href= "<%= gossips_path %>">Les Gossips</a>
-        <a class="p-2 text-dark" href= "<%= team_path %>">La Team</a>
-        <a class="p-2 text-dark" href="<%= contact_path %>">Nous contacter</a>
+        <a class="p-2 text-dark" href="<%= new_gossip_path %>">CRÉER UN GOSSIP</a>
+        <a class="p-2 text-dark" href= "<%= gossips_path %>">LES GOSSIPS</a>
+        <a class="p-2 text-dark" href= "<%= team_path %>">LA TEAM</a>
+        <a class="p-2 text-dark" href="<%= contact_path %>">NOUS CONTACTER</a>
 
       </nav>
-      <a class="btn btn-outline-primary" href="<%= new_session_path %>">Log In</a>
+      <a class="btn btn-outline-primary" href="<%= new_session_path %>">SE CONNECTER</a>
     </div>
 
     <%= yield %>
       <footer>
-  <p style="margin-bottom:100px;">
+  <p style="margin-bottom:20px;">
    <center><small><p><em>Ⓒ Made with love from Caen (où on dit PAIN AU CHOCOLAT)</em></p></small></center>
  </footer>
 
@@ -34,5 +35,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-  </body>
+</body>
 </html>
